--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -44,7 +44,7 @@
   <div class="header-title">
     <div class="header-title-wrap">
       <h1>{{ site.title }}</h1>
-      <h2>#SomosRuido / #WeAreNoise / #私たちは騒音です</h2>
+      <h2>Dogeclaw Mystics</h2>
     </div><!-- /.header-title-wrap -->
   </div><!-- /.header-title -->
 </div><!-- /.entry-header -->
